# piliwela

./: .gitignore  README.md  pyproject.toml
piliwela_core/: Cargo.toml
piliwela_core/src/: converter.rs  detector.rs  lib.rs  normalizer.rs  options.rs  python.rs
piliwela_core/src/engine/: english.rs  english_words.rs  kombuva.rs  matcher.rs  mod.rs  rules.rs  script.rs  tokenizer.rs
piliwela_core/src/mappings/: common.rs  fm.rs  mod.rs  signatures.rs  wijeya.rs
piliwela_core/tests/: detector_test.rs  english_test.rs  fm_test.rs  kombuva_test.rs  matcher_test.rs  normalizer_test.rs  rules_test.rs  tokenizer.rs
python/piliwela/models/: block.py  document.py  page.py
rust/: Cargo.toml
rust/src/: lib.rs
src/piliwela/: __init__.py  reader.py
src/piliwela/models/: __init__.py  document.py  line.py  page.py  span.py
src/piliwela/readers/: pdf_reader.py
tests/: test_scanner.py
