[build-system]
requires = ["setuptools>=61.0", "wheel", "maturin>=1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piliwela"
version = "0.1.0"
description = "Sinhala Document Understanding Toolkit for AI and RAG"
authors = [
    {name = "Naveen Chethiya"}
]
requires-python = ">=3.10"

dependencies = [
    "PyMuPDF",
]