[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "piliwela"
version = "0.1.1"
description = "Intelligent PDF Scanner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "PyMuPDF>=1.26.0",
    "pdfplumber >= 0.11.10"
]